--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>건설정보과는?</title>
+<title>의정부공업고등학교는?</title>
 </head>
 <body>
   <h1><a href="1.html">의정부공업고등학교</h1>
@@ -9,9 +9,8 @@
     <li><a href="2.html">전기에너지과</a></li>
       <li><a href="3.html">컴퓨터응용기계과</a></li>
       <li><a href="4.html">건설정보과</a></li>
+      <li><a href="5.html">결론적으론..</a></li>
       </ol>
-      <h2>건설정보과</h2>
-변화하는 건설기술에 대응하여 최신 기술습득과 첨단장비를<br>
-활용한 실습교육을 통해 건설기술인의 양성을 목표로 한다.
-<img src="xz.jpg" width="60%">
+의공고는<br>  <u>쓰레기</u>학교다<br>
+<img src="re.jpg" width="100%">
 </body>
