--- a/4.html
+++ b/4.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>건설정보과는?</title>
+<title>의정부공업고등학교는?</title>
 </head>
 <body>
-  <h1><a href="1.html">의정부공업고등학교</h1>
+  <h1><a href="index.html">의정부공업고등학교</h1>
   <ol>
-    <li><a href="2.html">전기에너지과</a></li>
-      <li><a href="3.html">컴퓨터응용기계과</a></li>
-      <li><a href="4.html">건설정보과</a></li>
+    <li><a href="1.html">전기에너지과</a></li>
+      <li><a href="2.html">컴퓨터응용기계과</a></li>
+      <li><a href="3.html">건설정보과</a></li>
+      <li><a href="4.html">결론적으론..</a></li>
       </ol>
-      <h2>건설정보과</h2>
-변화하는 건설기술에 대응하여 최신 기술습득과 첨단장비를<br>
-활용한 실습교육을 통해 건설기술인의 양성을 목표로 한다.
-<img src="xz.jpg" width="60%">
+<strong><rgb>좆공고 다니지 마라</rgb></strong>
+<img src="re.jpg" width="100%">
 </body>
