--- a/3.html
+++ b/3.html
@@ -4,11 +4,12 @@
 <title>건설정보과는?</title>
 </head>
 <body>
-  <h1><a href="1.html">의정부공업고등학교</h1>
+  <h1><a href="index.html">의정부공업고등학교</h1>
   <ol>
-    <li><a href="2.html">전기에너지과</a></li>
-      <li><a href="3.html">컴퓨터응용기계과</a></li>
-      <li><a href="4.html">건설정보과</a></li>
+    <li><a href="1.html">전기에너지과</a></li>
+      <li><a href="2.html">컴퓨터응용기계과</a></li>
+      <li><a href="3.html">건설정보과</a></li>
+      <li><a href="4.html">결론적으론..</a></li>
       </ol>
       <h2>건설정보과</h2>
 변화하는 건설기술에 대응하여 최신 기술습득과 첨단장비를<br>
